# synapseFlow

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
agents/nl2pipeline/: DESIGN.md  README.md  mcp_server.py  nl2pipeline.py  repl.py  workflow.py
agents/nl2pipeline/cli/: langgraph.py  legacy.py
agents/nl2pipeline/core/: driver.py  workflow.py
agents/nl2pipeline/legacy/: repl.py  workflow.py
agents/nl2pipeline/shared/: mcp_client.py  prompts.py  router.py
docs/: EXTENSIBILITY.md  SHARED_STREAM_DYNAMIC_DECODE_PLAN.md  SLIDING_WINDOW_PLAN.md  SLIDING_WINDOW_PROCESSOR_PLAN.md  agents_readme.md  aggregation_processor_plan.md  pipeline_plan_cache.md  stateful_function.md  window.md
docs/syntax/: streams.md
scripts/: README.md  bump_version.sh  heap_to_svg.sh  sf_rest_tool.md
src/: bootstrap.rs  config.rs  lib.rs  main.rs  metrics.rs  server.rs
src/build_info/: Cargo.toml  build.rs
src/build_info/src/: lib.rs
src/datatypes/src/: datatypes.rs  value.rs
src/datatypes/tests/: column_schema_test.rs
src/flow/: Cargo.toml  build.rs
src/flow/docs/: API_REFERENCE.md  README.md
src/flow/src/: build_info.rs  lib.rs  plan_cache.rs  sql_conversion.rs  tuple.rs
src/flow/tests/: combined_access_test.rs  mock_source.rs  (+24 more)
src/logging/: cleanup.rs  filename.rs  mod.rs  rolling_file.rs
src/manager/: Cargo.toml
src/storage/: Cargo.toml
src/telemetry/: Cargo.toml
tests/sql_assert/: config-test.toml  flow_sql_assert.rs  sql_gen.yy
user_docs/api/: pipeline.md  stream.md
user_docs/sql/: expr.md  function.md  select.md  window.md
(+145 files in other folders)
