[workspace]
members = [
    "src/flow",
    "src/datatypes",
    "src/parser", "src/manager",
    "src/telemetry",
]
resolver = "2"

[package]
name = "synapse-flow"
version = "0.1.0"
edition = "2021"

[dependencies]
parser = { path = "src/parser" }
flow = { path = "src/flow" }
datatypes = { path = "src/datatypes" }
sqlparser = { version = "0.40", features = ["serde", "visitor"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time"] }
prometheus = "0.13"
prometheus_exporter = "0.8"
once_cell = "1.19"
sysinfo = "0.30"
pprof = { version = "0.6.1", features = ["flamegraph", "protobuf"] }
tikv-jemallocator = { version = "0.6.0", features = ["profiling"] }
tikv-jemalloc-ctl = { version = "0.6.0", features = ["stats"] }
manager = { path = "src/manager" }
telemetry = { path = "src/telemetry" }

[[bin]]
name = "synapse-flow"
path = "src/main.rs"
